# MicrovoltsEmulator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Microvolts-Emulator-V2.sln  README.md  android.tc  vcpkg.json
AuthServer/: AuthServer.vcxproj  AuthServer.vcxproj.filters  AuthServerMain.cpp  CMakeLists.txt
AuthServer/include/: AuthEnums.h  AuthServer.h  Constants.h
AuthServer/include/Database/: DbPlayerInfo.h
AuthServer/include/Handlers/: AuthAccountBusyHandler.h  AuthAllHandlers.h  AuthAuthorizationHandler.h  AuthChannelsHandler.h
AuthServer/include/Network/: AuthSession.h
AuthServer/include/Player/: AuthPlayerManager.h
AuthServer/include/Structures/: AuthAccountInfo.h  AuthChannels.h  AuthConnection.h
AuthServer/src/: AuthServer.cpp  main.cpp
AuthServer/src/Database/: DbPlayerInfo.cpp
AuthServer/src/Network/: AuthSession.cpp
CastServer/: CMakeLists.txt  CastServer.vcxproj  CastServer.vcxproj.filters
CastServer/include/: CastServer.h
CastServer/include/Classes/: Room.h  RoomsManager.h
CastServer/include/Handlers/: AccountNamesHandler.h  CastConnectionHandler.h  CastServerPongHandler.h  CrashHandler.h  EliminationNextRoundHandler.h  HostRoomJoinControlHandler.h  InitialMatchLoadingHandler.h  MatchEndHandler.h  MatchLeaveHandler.h  PlayerPositionHandler.h  PlayerRoomSyncHandler.h  RespawnHandler.h  RoomCreationHandler.h  RoomTickProviderHandler.h  RoomTickSyncHandler.h  SwitchStateHandler.h  UnknownHandler1.h  UnknownHandlers.h  ZombieModeHandlers.h
CastServer/include/Handlers/WeaponHandlers/: ExplosivesDamageHandler.h  ExplosivesHandler.h  WeaponAttackHandler.h  WeaponReloadHandler.h
CastServer/include/Network/: CastSession.h  SessionsManager.h
CastServer/include/Structures/: PlayerPositionFromClient.h  PlayerPositionFromServer.h  SuicideStruct.h
CastServer/include/Utils/: HostSuicideUtils.h
CastServer/src/: CastServer.cpp  CastServerMain.cpp
CastServer/src/Classes/: Room.cpp  RoomsManager.cpp
CastServer/src/Network/: CastSession.cpp  SessionsManager.cpp
Common/: CMakeLists.txt  Common.cpp  Common.vcxproj  Common.vcxproj.filters
Common/include/ChatCommands/: AbstractCommandBase.h  ISimpleCommand.h  ISimpleRoomCommand.h
Common/include/ChatCommands/ComplexCommands/: IComplexCommand.h  IComplexRoomCommand.h
Common/include/ChatCommands/DatabaseCommands/: AbstractOneArgNonNumericalDbCommand.h  AbstractThreeArgCommandDb.h  IComplexDbCommand.h
Common/include/ConstantDatabase/: Cdb.h  Cdb.h.old  CdbSingleton.h
Common/include/ConstantDatabase/Structures/: CdbCapsuleDisplay.h  CdbCapsuleInfo.h  CdbCapsulePackageInfo.h  CdbGradeInfo.h  CdbItemInfo.h  CdbItemsInfo.h  CdbMapInfo.h  CdbRewardInfo.h  CdbUpgradeInfo.h  CdbWeaponsInfo.h  SetItemInfo.h
Common/include/Cryptography/: Crypt.h
Common/include/Enums/: AchievementEnums.h  ExtrasEnums.h  GameEnums.h  MiscellaneousEnums.h  PlayerEnums.h  RoomEnums.h
Common/include/Network/: Packet.h  Session.h  SessionIdManager.h
Common/include/Protocol/: CommandHeader.h  TcpHeader.h
Common/include/Utils/: IPC_Structs.h  Logger.h  Parser.h  RandomGeneration.h  Utils.h
Common/src/Cryptography/: Crypt.cpp
Common/src/Network/: Packet.cpp  Session.cpp
Common/src/Protocol/: CommandHeader.cpp  TcpHeader.cpp
Common/src/Utils/: Parser.cpp
MainServer/: CMakeLists.txt  MainServer.h.vcxproj  MainServer.h.vcxproj.filters  MainServer.vcxproj  MainServer.vcxproj.filters
MainServer/include/: CdbUtils.h  MainEnums.h  MainServer.h  Utilities.h
MainServer/include/Boxes/: BoxBase.h  BrilliantBox.h  MpBox.h
MainServer/include/ChatCommands/: AllCommandsIncludes.h  ChatCommands.h
MainServer/include/ChatCommands/DatabaseCommands/: AddPlayer.h  (+1 more)
MainServer/include/Classes/: CapsuleManager.h  Player.h  Room.h  RoomsManager.h
MainServer/include/Handlers/: CapsuleReqHandler.h  CapsuleSpinHandler.h  EventsHandlers.h  LobbyClanListHandler.h  LobbyListHandler.h  MainLobbyChatHandler.h
MainServer/include/Network/: AuthSession.h  MainSession.h  MainSessionManager.h
MainServer/include/Persistence/: MainDatabaseManager.h  MainScheduler.h
MainServer/include/Structures/: EndScoreboard.h  Mailbox.h  MainEventsList.h
MainServer/src/: MainServer.cpp  MainServerMain.cpp
MainServer/src/ChatCommands/: ChatCommands.cpp
MainServer/src/Classes/: CapsuleManager.cpp  Player.cpp  Room.cpp  RoomsManager.cpp
MainServer/src/Network/: MainSession.cpp  MainSessionManager.cpp
MainServer/src/Persistence/: MainScheduler.cpp
(+213 files in other folders)
